# allocators

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml
docs/: build_docs.sh  changelog.md  conf.py  doxygen.cfg  header.html  push_docs.sh
samples/: CMakeLists.txt
samples/composition/: CMakeLists.txt  main.cpp
samples/multithreading/: CMakeLists.txt  main.cpp
src/include/boost/: memory.hpp
src/include/boost/memory/: affix_allocator.hpp  affix_allocator.ipp  alignment.hpp  alignment.ipp  allocation_guard.hpp  allocation_guard.ipp  allocators.hpp  bitmapped_block.hpp  bitmapped_block.ipp  bucketizer.hpp  bucketizer.ipp  buffer_ref.hpp  buffer_ref.ipp  fallback_allocator.hpp  fallback_allocator.ipp  free_list.hpp  free_list.ipp  mallocator.hpp  mallocator.ipp  memory_block.hpp  memory_block_guard.hpp  memory_block_guard.ipp  null_allocator.hpp  null_allocator.ipp  operators.hpp  segregator.hpp  segregator.ipp  stack_allocator.hpp  stack_allocator.ipp
src/include/boost/utils/: backtrace.hpp  backtrace.ipp  literals.hpp  nop_unique_ptr.hpp
tests/: CMakeLists.txt  affix_allocator_tests.cpp  alignment_tests.cpp  allocation_guard_tests.cpp  bitmapped_block_tests.cpp  bucketizer_tests.cpp  buffer_ref_tests.cpp  fallback_allocator_tests.cpp  free_list_tests.cpp  mallocator_tests.cpp  memory_block_guard_tests.cpp  null_allocator_tests.cpp  segregator_tests.cpp  stack_allocator_tests.cpp
